--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Aperture</title>
 
+    <link rel="stylesheet" href="css/style.css"/>
+
 </head>
 
 <body>
-<header>
+<header class="site_header">
 <div class="container">
     <a href="#" target="_blank" class="logo_header">
     <img src="img/Logo.svg" alt="Logo">
@@ -29,17 +31,23 @@
                 <a href="#" target="_blank">Contact</a>
             </li>
         </ul>
-        <button class="header_nav_button">Get template</button>
     </nav>
-    <div class="header_text">
+    <button class="header_nav_button">Get template</button>
+</div>
+</header>
+<section class="hero_section">
+    <div class="hero_container">
+        <div >
     <h3>
         Photographer & Filmmaker
     </h3>
     <h2>
         Aperture Studios
     </h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in<br>eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum<br> nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id<br> rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.
     </p>
+        </div>
+        <div class="hero_icons">
         <a href="#" target="_blank" class="header_icons">
             <img src="img/Frame.svg" alt="Frame">
         </a>
@@ -53,30 +61,38 @@
             <img src="img/Frame (3).svg" alt="Frame">
         </a>
     </div>
-</div>
-    </header>
+    </div>
+</section>
 <section class="gallery_section">
-    <div class="container">
-        <div class="text">
+    <div class="container-gallery">
 
-        <h4>
-            What we do.
-        </h4>
-        <p>The areas that we're specialized in.</p>
-        </div>
         <div class="gallery">
+            <div class="text">
+                <h4>What we do.</h4>
+                <p>The areas that we're specialized in.</p>
+            </div>
+            <div class="gallery_image">
+            <div class="gallery_first_left">
         <a href="#" target="_blank" class="gallery_img">
             <img src="img/IMAGE.jpg" alt="IMAGE">
         </a>
+            </div>
+            <div class="gallery_second_right">
             <a href="#" target="_blank" class="gallery_img">
                 <img src="img/IMAGE (1).jpg" alt="IMAGE (1)">
             </a>
+            </div>
+            <div class="gallery_third_left">
             <a href="#" target="_blank" class="gallery_img">
                 <img src="img/IMAGE (2).jpg" alt="IMAGE (2)">
             </a>
+        </div>
+            <div class="gallery_four_right">
             <a href="#" target="_blank" class="gallery_img">
                 <img src="img/IMAGE (3).jpg" alt="IMAGE (3)">
             </a>
+            </div>
+            </div>
         </div>
 
         <div class="gallery_text">
