--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Aperture</title>
 
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -30,14 +33,17 @@
             <li>
                 <a href="#" target="_blank">Contact</a>
             </li>
+            <li class="last_li">
+                <a href="#" target="_blank">Get template</a>
+            </li>
         </ul>
     </nav>
-    <button class="header_nav_button">Get template</button>
 </div>
 </header>
+<main>
 <section class="hero_section">
     <div class="hero_container">
-        <div >
+        <div class="hero_text" >
     <h3>
         Photographer & Filmmaker
     </h3>
@@ -72,53 +78,54 @@
                 <p>The areas that we're specialized in.</p>
             </div>
             <div class="gallery_image">
-            <div class="gallery_first_left">
-        <a href="#" target="_blank" class="gallery_img">
+            <div class="gallery_first">
             <img src="img/IMAGE.jpg" alt="IMAGE">
-        </a>
+                <div class="gallery_text1">
+                    <h5>Product Photography</h5>
+                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                    <a href="#" target="_blank">Read more</a>
+                </div>
+
             </div>
-            <div class="gallery_second_right">
-            <a href="#" target="_blank" class="gallery_img">
+            <div class="gallery_first">
                 <img src="img/IMAGE (1).jpg" alt="IMAGE (1)">
-            </a>
+                <div class="gallery_text2">
+                    <h5>Architecture Photography</h5>
+                    <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
+                    <a href="#" target="_blank">Read more</a>
+                </div>
+
             </div>
-            <div class="gallery_third_left">
-            <a href="#" target="_blank" class="gallery_img">
+            <div class="gallery_first">
                 <img src="img/IMAGE (2).jpg" alt="IMAGE (2)">
-            </a>
+                <div class="gallery_text3">
+                    <h5>Drone Photography</h5>
+                    <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
+                    <a href="#" target="_blank">Read more</a>
+                </div>
+
         </div>
-            <div class="gallery_four_right">
-            <a href="#" target="_blank" class="gallery_img">
+            <div class="gallery_first">
                 <img src="img/IMAGE (3).jpg" alt="IMAGE (3)">
-            </a>
+                <div class="gallery_text4">
+                    <h5>Wildlife Photography</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
+                    <a href="#" target="_blank">Read more</a>
+                </div>
+
             </div>
             </div>
         </div>
 
-        <div class="gallery_text">
-        <h5>Product Photography</h5>
-        <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-        <a href="#" target="_blank">Read more</a>
-
-       <h5>Architecture Photography</h5>
-        <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
-        <a href="#" target="_blank">Read more</a>
-
-            <h5>Drone Photography</h5>
-            <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-            <a href="#" target="_blank">Read more</a>
-
-            <h5>Wildlife Photography</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-            <a href="#" target="_blank">Read more</a>
-        </div>
     </div>
 </section>
-<section>
+<section class="sunset_section">
     <div class="container">
-        <div class="slider">
+   <div class="sunset">
             <h5>Sunset at Mount Fuji</h5>
-            <p>Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non.</p>
+            <p>Duis tristique sed lorem a vestibulum. Cras<br> commodo consequat orci, in convallis<br> risus egestas non.</p>
+   </div>
+            <div class="slider">
             <a href="#" target="_blank">
                 <img src="img/Frame1.svg" alt="Frame">
             </a>
@@ -134,18 +141,20 @@
         </div>
     </div>
 </section>
-<section style=" padding-bottom: 50px">
+<section class="about_section">
     <div class="container">
         <div class="about">
             <h5>The Gear cage</h5>
             <h4>The tools that we use.</h4>
-            <p>The say that "no place is boring if you've had a good night's sleep and have a pocket full of unexposed film". While we don't shoot (a lot) of film these days — these are the tools that we actually use everyday to capture the amazing things around us.</p>
-            <a href="#" target="_blank">Check it out</a>
+            <p>The say that "no place is boring if you've had a good night's sleep and<br> have a pocket full of unexposed film". While we don't shoot (a lot) of film<br> these days — these are the tools that we actually use everyday to<br> capture the amazing things around us.</p>
+            <a class="check" href="#" target="_blank">Check it out</a>
         </div>
-        <div class="about-right">
+        <div class="back-img">
             <a href="#" target="_blank" >
                 <img src="img/IMAGE1.jpg" alt="IMAGE">
             </a>
+            </div>
+            <div class="about-right">
             <a href="#" target="_blank" >
                 <img src="img/Frame11.svg" alt="Frame">
             </a>
@@ -161,12 +170,13 @@
         </div>
     </div>
 </section>
-<section>
+<section class="slider1_section">
     <div class="container">
-        <div class="slider-1">
+        <div class="slider-1-text">
             <h5>Monstera Leafs</h5>
-            <p>Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
-
+            <p>Vestibulum sit amet urna turpis. Mauris<br>euismod elit et nisi ultrices, ut faucibus<br>orci tincidunt.</p>
+            </div>
+<div class="slider-1-img">
             <a href="#" target="_blank">
                 <img src="img/frame-cop.svg" alt="Frame">
             </a>
@@ -182,9 +192,9 @@
         </div>
     </div>
 </section>
-<section>
+<section class="clients_section">
     <div class="container">
-        <div>
+        <div class="clients-text">
             <h5>Past clients</h5>
             <p>Trusted by your favourite companies</p>
         </div>
@@ -208,12 +218,13 @@
         </div>
     </div>
 </section>
-<section>
+<section class="slider2_section">
     <div class="container">
-        <div class="slider-2">
+        <div class="slider-2-text">
           <h5>Star fall in the Himalayas</h5>
-            <p>Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
-
+            <p>Nulla rhoncus feugiat eros quis<br> consectetur. Morbi neque ex,<br> condimentum dapibus congue et,<br> vulputate ut ligula.</p>
+            </div>
+           <div class="slider-2-img">
           <a href="#" target="_blank">
               <img src="img/Frame111.svg" alt="#">
           </a>
@@ -230,26 +241,28 @@
         </div>
     </div>
 </section>
-<section>
+<section class="help_section">
     <div class="container">
-        <div class="help">
-            <h3>Need help with photography or videography?</h3>
+        <div class="help_text">
+            <h3>Need help with photography <br>or videography?</h3>
             <p>We're here for you!</p>
-            <a href="#" target="_blank">Get in touch</a>
+            <a class="help_btn" href="#" target="_blank">Get in touch</a>
         </div>
     </div>
 </section>
+</main>
 <footer>
     <div class="container">
-        <div class="copyright">
-            <a href="#" target="_blank" class="logo_header">
+        <div class="copyright-logo">
+            <a href="#" target="_blank" class="logo_footer">
                 <img src="img/Logo.svg" alt="Logo">
             </a>
             <p>Photographers & videographers capturing the world around us.</p>
+            </div>
             <div class="rights">
             <ul>
                 <li>
-                    <a>Business areas</a>
+                    <a class="first-li">Business areas</a>
                 </li>
                 <li>
                     <a>Product Photography</a>
@@ -266,7 +279,7 @@
             </ul>
             <ul>
                 <li>
-                    <a>Pages</a>
+                    <a class="first-li">Pages</a>
                 </li>
                 <li>
                     <a>Gear cage</a>
@@ -288,8 +301,11 @@
                 </li>
             </ul>
             </div>
+        <div class="copyright-left">
             <h5>Subscribe to our newsletter</h5>
             <p>Read about all the things we do.</p>
+        </div>
+        <div class="copyright-right">
             <a href="#" target="_blank">
                 -----------
             </a>
