--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="gallery_text1">
                     <h5>Product Photography</h5>
                     <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                    <a href="#" target="_blank">Read more</a>
+                    <a class="read_more" href="#" target="_blank">Read more</a>
                 </div>
 
             </div>
@@ -92,7 +92,7 @@
                 <div class="gallery_text2">
                     <h5>Architecture Photography</h5>
                     <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
-                    <a href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">Read more</a>
                 </div>
 
             </div>
@@ -101,7 +101,7 @@
                 <div class="gallery_text3">
                     <h5>Drone Photography</h5>
                     <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                    <a href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">Read more</a>
                 </div>
 
         </div>
@@ -110,7 +110,7 @@
                 <div class="gallery_text4">
                     <h5>Wildlife Photography</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-                    <a href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">Read more</a>
                 </div>
 
             </div>
@@ -150,9 +150,7 @@
             <a class="check" href="#" target="_blank">Check it out</a>
         </div>
         <div class="back-img">
-            <a href="#" target="_blank" >
                 <img src="img/IMAGE1.jpg" alt="IMAGE">
-            </a>
             </div>
             <div class="about-right">
             <a href="#" target="_blank" >
