--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
             <img src="img/IMAGE.jpg" alt="IMAGE">
                 <div class="gallery_text1">
                     <h5>Product Photography</h5>
-                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                    <a class="read_more" href="#" target="_blank">Read more</a>
+                    <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus<br>quam.</p>
+                    <a class="read_more" href="#" target="_blank">
+                        <img class="read_img" src="img/Group.svg" alt="Read more">
+                        Read more</a>
                 </div>
 
             </div>
@@ -92,7 +94,9 @@
                 <div class="gallery_text2">
                     <h5>Architecture Photography</h5>
                     <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
-                    <a class="read_more"  href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">
+                        <img class="read_img" src="img/Group.svg" alt="Read more">
+                        Read more</a>
                 </div>
 
             </div>
@@ -101,7 +105,9 @@
                 <div class="gallery_text3">
                     <h5>Drone Photography</h5>
                     <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
-                    <a class="read_more"  href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">
+                        <img class="read_img" src="img/Group.svg" alt="Read more">
+                        Read more</a>
                 </div>
 
         </div>
@@ -110,7 +116,9 @@
                 <div class="gallery_text4">
                     <h5>Wildlife Photography</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
-                    <a class="read_more"  href="#" target="_blank">Read more</a>
+                    <a class="read_more"  href="#" target="_blank">
+                        <img class="read_img" src="img/Group.svg" alt="Read more">
+                        Read more</a>
                 </div>
 
             </div>
@@ -147,7 +155,9 @@
             <h5>The Gear cage</h5>
             <h4>The tools that we use.</h4>
             <p>The say that "no place is boring if you've had a good night's sleep and<br> have a pocket full of unexposed film". While we don't shoot (a lot) of film<br> these days — these are the tools that we actually use everyday to<br> capture the amazing things around us.</p>
-            <a class="check" href="#" target="_blank">Check it out</a>
+            <a class="check" href="#" target="_blank">
+                <img class="check_img" src="img/Group.svg" alt="Check">
+                Check it out</a>
         </div>
         <div class="back-img">
                 <img src="img/IMAGE1.jpg" alt="IMAGE">
@@ -250,78 +260,70 @@
 </section>
 </main>
 <footer>
-    <div class="container">
-        <div class="copyright-logo">
-            <a href="#" target="_blank" class="logo_footer">
-                <img src="img/Logo.svg" alt="Logo">
-            </a>
-            <p>Photographers & videographers capturing the world around us.</p>
+    <div class="footer-container">
+        <div class="footer-top">
+            <div class="footer-logo">
+                <a href="#">
+                    <img src="img/Logo.svg" alt="Logo" />
+                </a>
+                <p>Photographers & videographers capturing the world around us.</p>
             </div>
-            <div class="rights">
-            <ul>
-                <li>
-                    <a class="first-li">Business areas</a>
-                </li>
-                <li>
-                    <a>Product Photography</a>
-                </li>
-                <li>
-                    <a>Architecture Photography</a>
-                </li>
-                <li>
-                    <a>Drone Photography</a>
-                </li>
-                <li>
-                    <a>Wildlife Photography</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a class="first-li">Pages</a>
-                </li>
-                <li>
-                    <a>Gear cage</a>
-                </li>
-                <li>
-                    <a>Featured images</a>
-                </li>
-                <li>
-                    <a>Contact</a>
-                </li>
-                <li>
-                    <a>Style guide</a>
-                </li>
-                <li>
-                    <a>Instructions</a>
-                </li>
-                <li>
-                    <a>Changelog</a>
-                </li>
-            </ul>
+
+            <div class="footer-links">
+                <div class="links-column">
+                    <p class="column-title">Business Areas</p>
+                    <ul>
+                        <li><a href="#">Product Photography</a></li>
+                        <li><a href="#">Architecture Photography</a></li>
+                        <li><a href="#">Drone Photography</a></li>
+                        <li><a href="#">Wildlife Photography</a></li>
+                    </ul>
+                </div>
+                <div class="links-column">
+                    <p class="column-title">Pages</p>
+                    <ul>
+                        <li><a href="#">Gear cage</a></li>
+                        <li><a href="#">Featured images</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Style guide</a></li>
+                        <li><a href="#">Instructions</a></li>
+                        <li><a href="#">Changelog</a></li>
+                    </ul>
+                </div>
             </div>
-        <div class="copyright-left">
-            <h5>Subscribe to our newsletter</h5>
-            <p>Read about all the things we do.</p>
-        </div>
-        <div class="copyright-right">
-            <a href="#" target="_blank">
-                -----------
-            </a>
-            <p>© Aperture Photography, Inc. All rights reserved.Licensing</p>
 
-            <a href="#" target="_blank">
-                <img src="img/twitter.svg" alt="Social Media">
-            </a>
-            <a href="#" target="_blank">
-                <img src="img/instagram.svg" alt="Social Media">
-            </a>
-            <a href="#" target="_blank">
-                <img src="img/facebook.svg" alt="Social Media">
-            </a>
-
+            <div class="footer-newsletter">
+                <p class="column-title">Subscribe to our newsletter</p>
+                <p>Read about all the things we do.</p>
+                <form action="#" method="post" class="newsletter-form">
+                    <input  placeholder="" name="">
+                    <button type="submit"></button>
+                </form>
+            </div>
         </div>
+
+        <div class="footer-bottom">
+            <p>© Aperture Photography, Inc. All rights reserved. Licensing.</p>
+
+                <ul>
+                    <li>
+                        <a href="#"><img src="img/twitter.svg" alt="Twitter" /></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/instagram.svg" alt="Instagram"/></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="img/facebook.svg" alt="Facebook" /></a>
+                    </li>
+                </ul>
+            </div>
     </div>
 </footer>
+
+
+
+
+
 
 
 </body>
