--- a/index.html
+++ b/index.html
@@ -295,11 +295,15 @@
             <div class="footer-newsletter">
                 <p class="column-title">Subscribe to our newsletter</p>
                 <p>Read about all the things we do.</p>
+
+
+            <div class="footer-form">
                 <form action="#" method="post" class="newsletter-form">
                     <input  placeholder="" name="">
                     <button type="submit"></button>
                 </form>
             </div>
+        </div>
         </div>
 
         <div class="footer-bottom">
