--- a/index.html
+++ b/index.html
@@ -293,9 +293,10 @@
             </div>
 
             <div class="footer-newsletter">
+                <div class="newsletter-text">
                 <p class="column-title">Subscribe to our newsletter</p>
                 <p>Read about all the things we do.</p>
-
+                </div>
 
             <div class="footer-form">
                 <form action="#" method="post" class="newsletter-form">
