--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
                     <h5>Product Photography</h5>
                     <p>Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus<br>quam.</p>
                     <a class="read_more" href="#" target="_blank">
-                        <img class="read_img" src="img/Group.svg" alt="Read more">
                         Read more</a>
                 </div>
 
@@ -113,7 +112,6 @@
                     <h5>Drone Photography</h5>
                     <p>Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis tristique sed lorem a vestibulum. Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.</p>
                     <a class="read_more"  href="#" target="_blank">
-                        <img class="read_img" src="img/Group.svg" alt="Read more">
                         Read more</a>
                 </div>
 
@@ -124,7 +122,6 @@
                     <h5>Wildlife Photography</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis.</p>
                     <a class="read_more"  href="#" target="_blank">
-                        <img class="read_img" src="img/Group.svg" alt="Read more">
                         Read more</a>
                 </div>
 
@@ -298,21 +295,22 @@
                     </ul>
                 </div>
             </div>
+        </div>
 
             <div class="footer-newsletter">
-                <div class="newsletter-text">
+                <div class="subscribe-text">
                 <p class="column-title">Subscribe to our newsletter</p>
                 <p>Read about all the things we do.</p>
                 </div>
 
             <div class="footer-form">
                 <form action="#" method="post" class="newsletter-form">
-                    <input  placeholder="" name="">
+                    <input type="button" placeholder="" name="">
                     <button type="submit"></button>
                 </form>
             </div>
         </div>
-        </div>
+
 
         <div class="footer-bottom">
             <p>© Aperture Photography, Inc. All rights reserved. Licensing.</p>
