--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
+     <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/media.css"/>
-    <link rel="stylesheet" href="js/JS.js"/>
+
 
 </head>
 
@@ -41,17 +47,17 @@
             </li>
         </ul>
     </nav>
-    <div class="burger" id="burger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
 </div>
 </header>
 <main>
 <section class="hero_section">
     <div class="hero_container">
+        <div id="dialog" title="Hello">
+            <p>Hello.My name is Vlad. I am street photographer </p>
+        </div>
         <div class="hero_text" >
+            <div id="slider"></div>
+
     <h3>
         Photographer & Filmmaker
     </h3>
@@ -97,7 +103,7 @@
 
             </div>
             <div class="gallery_first">
-                <img src="img/IMAGE (1).jpg" alt="IMAGE (1)">
+                <img  src="img/IMAGE (1).jpg" alt="image">
                 <div class="gallery_text2">
                     <h5>Architecture Photography</h5>
                     <p>Aenean porta neque eget consequat fringilla. Vestibulum ultrices, orci nec egestas pharetra, ligula est semper enim, nec auctor sapien leo nec purus. Fusce tincidunt aliquet sapien, sit amet rhoncus leo imperdiet nec.</p>
@@ -210,11 +216,11 @@
             <h5>Past clients</h5>
             <p>Trusted by your favourite companies</p>
         </div>
-        <div class="clients_logo">
-            <a href="#" target="_blank">
-                <img src="img/IMAGE%20(11).svg" alt="#">
+        <div class="clients_logo owl-carousel">
+            <a href="#" target="_blank" rel="rell">
+                <img src="img/IMAGE%20(11).svg" alt="#" >
             </a>
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" rel="rell">
                 <img src="img/IMAGE%20(22).svg" alt="#">
             </a>
             <a href="#" target="_blank">
@@ -306,7 +312,7 @@
             <div class="footer-form">
                 <form action="#" method="post" class="newsletter-form">
                     <input type="button" placeholder="" name="">
-                    <button type="submit"></button>
+                    <button class="btn-footer" type="submit"></button>
                 </form>
             </div>
         </div>
@@ -315,7 +321,7 @@
         <div class="footer-bottom">
             <p>© Aperture Photography, Inc. All rights reserved. Licensing.</p>
 
-                <ul>
+                <ul class="footer-social">
                     <li>
                         <a href="#"><img src="img/twitter.svg" alt="Twitter" /></a>
                     </li>
@@ -334,7 +340,15 @@
 
 
 
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
+
+<script src="js/owl.carousel.js"></script>
+
+<script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
+
+
+<script src="js/script.js"></script>
 
 </body>
 </html>
