--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <section class="hero_section">
     <div class="hero_container">
         <div id="dialog" title="Hello">
-            <p>Hello.My name is Vlad. I am street photographer </p>
+            <p>My name is Vlad and I am a street photographer.</p>
         </div>
         <div class="hero_text" >
             <div id="slider"></div>
@@ -166,7 +166,6 @@
             <h4>The tools that we use.</h4>
             <p>The say that "no place is boring if you've had a good night's sleep and<br> have a pocket full of unexposed film". While we don't shoot (a lot) of film<br> these days — these are the tools that we actually use everyday to<br> capture the amazing things around us.</p>
             <a class="check" href="#" target="_blank">
-                <img class="check_img" src="img/Group.svg" alt="Check">
                 Check it out</a>
         </div>
         <div class="back-img">
